# madlab

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
scripts/: convert_rdata.py
src/madlab/: __init__.py  bracket.py  evaluate.py  model.py  optimize.py  scrape.py  server.py
src/madlab/data/: bracket.men.2017.json  bracket.men.2017.parquet  bracket.men.2018.json  bracket.men.2019.json  bracket.men.2021.json  bracket.men.2022.json  bracket.men.2022.parquet  bracket.men.2023.parquet  bracket.men.2024.json  bracket.men.2025.json  bracket.men.2025.parquet  bracket.men.2026.json  bracket.women.2017.json  bracket.women.2017.parquet  bracket.women.2018.json  bracket.women.2021.json  bracket.women.2021.parquet  bracket.women.2022.parquet  bracket.women.2023.json  bracket.women.2025.json  bracket.women.2026.json  games.men.2016.parquet  games.men.2017.parquet  games.men.2018.parquet  games.men.2021.parquet  games.men.2022.parquet  games.men.2023.parquet  games.men.2026.parquet  games.women.2017.parquet  games.women.2018.parquet  games.women.2024.parquet  games.women.2025.parquet  pred.538.men.2018.parquet  pred.538.men.2023.parquet  pred.kenpom.men.2019.parquet  pred.pop.men.2016.parquet  pred.pop.men.2018.parquet  pred.pop.men.2023.parquet  pred.pop.men.2025.parquet  pred.pop.men.2026.parquet  (+3 more)
src/madlab/templates/: index.html
src/marchmadness/: __init__.py  bias.py  model.py  server.py  simulate.py
src/marchmadness/data/: bracket.men.2018.parquet  bracket.men.2019.parquet  (+35 more)
tests/: test_bracket.py  test_model.py  test_simulate.py
(+1 files in other folders)
