[project]
name = "madlab"
version = "1.2026.0"
description = "Beat your March Madness pool with statistical bracket optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "numpy>=2.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "matplotlib>=3.9",
    "pyarrow>=17.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyreadr>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marchmadness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
